update & created html & css pages

--- a/map.html
+++ b/map.html
@@ -6,6 +6,7 @@
 
 	<!-- style sheets -->
 	<link rel="stylesheet" href="css/map.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ropa+Sans">
 
 	<!-- leaflet -->
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
@@ -22,12 +23,22 @@
 
 </head>
 <body>
-
+	<div class="menu">
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="narrative.html">Narrative</a></li>
+            <li><a href="data.html">Data</a></li>
+            <li><a class="active" href="map.html">Map</a></li>
+            <li><a href="analysis.html">Analysis</a></li>
+            <li><a href="Blog/blog.html">Blog</a></li>
+            <li><a href="references.html">References</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </div>
 	<div class="header">
-		Bike Map
 	</div>
 	<div class="sidebar">
-        
+        The map contains....
 	</div>
 	<div class="content">
 		<div id="map"></div>
