--- a/blog.html
+++ b/blog.html
@@ -10,14 +10,14 @@
 
 <div class="menu">
     <ul>
-        <li><a href="DH151-SocialMedia/home.html">Home</a></li>
-        <li><a href="DH151-SocialMedia/narrative.html">Narrative</a></li>
-        <li><a href="DH151-SocialMedia/data.html">Data</a></li>
-        <li><a href="DH151-SocialMedia/map.html">Map</a></li>
-        <li><a href="DH151-SocialMedia/analysis.html">Analysis</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="narrative.html">Narrative</a></li>
+        <li><a href="data.html">Data</a></li>
+        <li><a href="map.html">Map</a></li>
+        <li><a href="analysis.html">Analysis</a></li>
         <li><a class="active" href="blog.html">Blog</a></li>
-        <li><a href="DH151-SocialMedia/references.html">References</a></li>
-        <li><a href="DH151-SocialMedia/about.html">About</a></li>
+        <li><a href="references.html">References</a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
 </div>
 <br>
