--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" href="blog.css">
-    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ropa+Sans"> 
 </head>
 
@@ -20,23 +19,21 @@
         <li><a href="about.html">About</a></li>
     </ul>
 </div>
+
 <br>
-<div class="header">
-    <h2>Blog</h2>
-  </div>
       <div class="card">
         <h2>Week 5</a></h2>
         <h5>May 1, 2022</h5>
         <p> This week, we dived deeper in data collection, and realized our original plan did not have enough data. Thus, we looked at other datasets and decided to switch our focus on the Metro Bike Share data. With this new focus, we then updated our proposal, data plan, and our ux design with storyboard once again. We additionally started building our website for the project, and to be ready for our midterm presentation.</p>
       </div>
       <div class="card">
-        <h2><a href="Week4/dataplan">Week 4</a></h2>
+        <h2><a href="Blog/Week4/dataplan">Week 4</a></h2>
         <h5>Apr 24, 2022</h5>
         <p> Refined our dataplan and created mindmap sketches for our UX Design! </p>
       </div>
 
       <div class="card">
-        <h2><a href="Week3/week3">Week 3</a></h2>
+        <h2><a href="Blog/Week3/week3">Week 3</a></h2>
         <h5>Apr 17, 2022</h5>
         <p> During week 3, we revisited our proposal, reviewed our research ideas,  and started the data collection process. We updated our social media topic on food and health. Our project will analyze the top viral food recipes and trends in the United States. Each month, a shift in the most searched for and posted food recipes highlight American popular culture. The food industry is powerful and not at all that different from the fashion industry. Those in power such as Tik Tok influencers, food corporations, and celebrities, are the trendsetters. In the world of social media, users are exposed to major food trends that take over our grocery store shelves. Food trends that revolve around social media are inspirational in the sense that it has a meaningful impact on our health and taste buds. Several of these trends are creative and often expose folks to new culture foods. Culture is heavily involved in these food trends. 
         </p>
@@ -48,19 +45,6 @@
         <p> Drafted our proposal</p>
       </div>
       
-    </div>
-
-    <div class="rightcolumn">
-
-      <div class="card">
-        <h2>About Us</h2>
-        <p>Some text about us</p>
-      </div>
-      
-      <div class="card">
-        <h3>Go to our Project</h3>
-        <p>Some text..</p>
-      </div>
     </div>
   </div>
 </body>
