--- a/map.html
+++ b/map.html
@@ -38,7 +38,21 @@
 	<div class="header">
 	</div>
 	<div class="sidebar">
-        The map contains....
+        <h2>INSTRUCTIONS</h2>
+			<p>Click on the bike icons to see station address and available bikes.</p>
+			<p>Hover on the green roads to see the bike lane streets.</p>
+			<p>Use the toggle box on the upper right to select desirable layers.</p>
+
+		<div class="sidebar-box">
+			<h3>Explore</h3>
+			<div class="sidebar-item" onclick="flyToIndex(34.066242,-118.445328)">UCLA</div>
+			<div class="sidebar-item" onclick="flyToIndex(34.02278,-118.40472)">Palms/Culver City</div>
+			<div class="sidebar-item" onclick="flyToIndex(33.980289,-118.451745)">Venice/ Del Rey/ Playa Vista</div>
+			<div class="sidebar-item" onclick="flyToIndex(34.050833,-118.255)">Downtown LA</div>
+			<div class="sidebar-item" onclick="flyToIndex(34.098907,-118.327759)">Hollywood</div>
+			<div class="sidebar-item" onclick="flyToIndex(34.091341,-118.293589)">East Hollywood</div>
+			<div class="sidebar-item" onclick="flyToIndex(34.157802,-118.370441)">North Hollywood</div>
+		</div>
 	</div>
 	<div class="content">
 		<div id="map"></div>
