update blog link

--- a/map.html
+++ b/map.html
@@ -30,7 +30,7 @@
             <li><a href="data.html">Data</a></li>
             <li><a class="active" href="map.html">Map</a></li>
             <li><a href="analysis.html">Analysis</a></li>
-            <li><a href="Blog/blog.html">Blog</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="references.html">References</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
