--- a/about.html
+++ b/about.html
@@ -64,11 +64,11 @@
     </div>
     <div class="column">
         <div class="card">
-            <img src="img4.jpg" alt="Michelle Kung" width="150px">
+            <img src="images/team/Michelle.jpeg" alt="Michelle Kung" width="150px">
             <div class="container">
                 <h2>Michelle Kung</h2>
                     <p class="title">Role</p>
-                    <p>Some text.</p> 
+                    <p>Michelle Kung is a fourth year sociology major from Hong Kong. She is interested in exploring how people interact and socialise under the digital environment. After graduation she hopes to leverage her digital skills and sociological understanding to help NGOs build digital campaigns.</p> 
                     <p><button class="button">Contact</button></p>
             </div>
         </div>
