--- a/map.html
+++ b/map.html
@@ -21,6 +21,10 @@
 	<!-- papaparse for csv data -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 
+	<!-- Locate Me -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js" charset="utf-8"></script>
+
 </head>
 <body>
 	<div class="menu">
@@ -63,6 +67,5 @@
 	</div>
 
 	<script src="js/map.js"></script>
-
 </body>
 </html>
