added bike icon explanation

--- a/map.html
+++ b/map.html
@@ -44,6 +44,11 @@
 	<div class="sidebar">
         <h2>INSTRUCTIONS</h2>
 			<p>Click on the bike icons to see station address and available bikes.</p>
+				<p>
+					<img src="images/icon/greenBike.png" width="25">: Smart/ Electric Bikes Available <br>
+					<img src="images/icon/blueBike.png" width="25">: Classic Bikes Available <br>
+					<img src="images/icon/greyBike.png" width="25">: No Available Bikes 
+				</p>
 			<p>Hover on the green roads to see the bike lane streets.</p>
 			<p>Use the toggle box on the upper right to select desirable layers.</p>
 
