included start and end station popularity

--- a/map.html
+++ b/map.html
@@ -54,7 +54,7 @@
 
 		<div class="sidebar-box">
 			<h3>Explore</h3>
-			<div class="sidebar-item" onclick="flyToIndex(34.066242,-118.445328)">UCLA</div>
+			<div class="sidebar-item" onclick="flyToIndex(34.066242,-118.445328);alert('There was no one using the bike stations at UCLA -- Metro Bike Share expansion to the UCLA campus and Westwood Village is launched in Spring 2022.')">UCLA*</div>
 			<div class="sidebar-item" onclick="flyToIndex(34.02278,-118.40472)">Palms/Culver City</div>
 			<div class="sidebar-item" onclick="flyToIndex(33.980289,-118.451745)">Venice/ Del Rey/ Playa Vista</div>
 			<div class="sidebar-item" onclick="flyToIndex(34.050833,-118.255)">Downtown LA</div>
@@ -62,6 +62,10 @@
 			<div class="sidebar-item" onclick="flyToIndex(34.091341,-118.293589)">East Hollywood</div>
 			<div class="sidebar-item" onclick="flyToIndex(34.157802,-118.370441)">North Hollywood</div>
 		</div>
+		<p>
+		*Metro Bike Share expansion to the UCLA campus and Westwood Village is launched in Spring 2022.
+		</p>
+
 	</div>
 	<div class="content">
 		<div id="map"></div>
