--- a/home.html
+++ b/home.html
@@ -36,16 +36,7 @@
     Bike It!</h3>
   </div>
   
-    <div class="search">
-        <div class="sb-example-1">
-            <div class="search">
-               <input type="text" class="searchTerm" placeholder="Search">
-               <button type="submit" class="searchButton">
-                 <i class="fa fa-search"></i>
-              </button>
-            </div>
-         </div>
-    </div>
+    
 
     <!-- Banner -->
 <div class="banner">
@@ -53,18 +44,29 @@
     <img src="images/bike-share-hero.jpeg" style="width:100%">
  
 </div>
-            
-    <div class="menu">
-        <ul>
-          <li><a class="active" href="home.html">Home</a></li>
-          <li><a href="data.html">Data</a></li>
-          <li><a href="map.html">Map</a></li>
-          <li><a href="analysis.html">Analysis</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="references.html">References</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
-    </div>
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  </head>
+
+  <body>
+    <input type="checkbox" id="active">
+    <label for="active" class="menu-btn"><span></span></label>
+    <label for="active" class="close"></label>
+    <div class="wrapper">
+      <ul>
+        <li><a class="active" href="home.html">Home</a></li>
+        <li><a href="data.html">Data</a></li>
+        <li><a href="map.html">Map</a></li>
+        <li><a href="analysis.html">Analysis</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="references.html">References</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+</div>
+  </body>           
+ 
 
     <div class="about">
         <h2 text-align: center>Our Goal</h2>
