--- a/blog.html
+++ b/blog.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 
 <head>
+  <title>Analysis - Metro Bike Share</title>
+  <meta charset="utf-8" />
+
+  
     <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ropa+Sans"> 
 </head>
 
 <body>
-
-<div class="menu">
+  <input type="checkbox" id="active">
+  <label for="active" class="menu-btn"><span></span></label>
+  <label for="active" class="close"></label>
+  <div class="wrapper">
     <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="data.html">Data</a></li>
-        <li><a href="map.html">Map</a></li>
-        <li><a href="analysis.html">Analysis</a></li>
-        <li><a class="active" href="blog.html">Blog</a></li>
-        <li><a href="references.html">References</a></li>
-        <li><a href="about.html">About</a></li>
+      <li><a class="active" href="home.html">Home</a></li>
+      <li><a href="data.html">Data</a></li>
+      <li><a href="map.html">Map</a></li>
+      <li><a href="analysis.html">Analysis</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
 </div>
+
 
 <br>
       <div class="card">
