--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,37 @@
 
 <br>
       <div class="card">
-        <h2>Week 5</a></h2>
+        <h2>Final Project</h2>
+        <h5>June 6, 2022</h5>
+        <p> Updates </p>
+      </div>
+      <div class="card">
+        <h2>Week 10</h2>
+        <h5>June 5, 2022</h5>
+        <p> Updates </p>
+      </div>
+      <div class="card">
+        <h2>Week 9</h2>
+        <h5>May 29, 2022</h5>
+        <p> We created a new navigation bar, and included social media icons in our about page. We also deleted some elements from the homepage because they were repetitive. </p>
+      </div>
+      <div class="card">
+        <h2>Week 8</h2>
+        <h5>May 22, 2022</h5>
+        <p> We did some data wrangling by changing variable names and adding counts by each order in order to simplify the code and showing popularity by quarter. We have also decided to delete the narrative tab to make the site simpler. Additionally, we uodated our homepage picture and put it some writings for the data page.</p>
+      </div>
+      <div class="card">
+        <h2>Week 7</h2>
+        <h5>May 15, 2022</h5>
+        <p> As we received feedback from professor and our classmates, we proceed in improving some elements of our project website. We also successfully implemented the bubbles based on the start and end stations popularity.</p>
+      </div>
+      <div class="card">
+        <h2>Week 6</h2>
+        <h5>May 8, 2022</h5>
+        <p> This week, we created a prototype for our project website, including a fully functional interative about and maproom page. In our midterm presentation on May 9, 2022, we introduced the importance of the map along with our concept art, mindmaps, storyboards, and other UX design elements. We also determined some of our next steps. Our midterm presentation can be viewed <a href="https://docs.google.com/presentation/d/1LM3kNM4iLqw9vSxSi_nBg6TIsviGjJD7SV_KEyyg0uk/edit#slide=id.g1266c543ba9_0_2003">here</a>. This week, we also initialized implementing the bubbles based on the start and end stations popularity. </p>
+      </div>
+      <div class="card">
+        <h2>Week 5</h2>
         <h5>May 1, 2022</h5>
         <p> This week, we dived deeper in data collection, and realized our original plan did not have enough data. Thus, we looked at other datasets and decided to switch our focus on the Metro Bike Share data. With this new focus, we then updated our proposal, data plan, and our ux design with storyboard once again. We additionally started building our website for the project, and to be ready for our midterm presentation.</p>
       </div>
