--- a/analysis.html
+++ b/analysis.html
@@ -86,6 +86,10 @@
 
     <p> Through the humanistic perspective, we aim to identify and critique the program’s performance. Our map room highlights relevant bike trip data and transit services enables users to understand the city's transportation infrastructure. No doubt, the usage and popularity of bike sharing has drastically shifted over time due to technology and improved urban planning by LA County officials. Over time, we have witnessed the emergence of safe bike lanes around the city, especially in downtown Los Angeles. Our work pinpoints the expansion of safe commuting options based on the network of bike sharing services and how biking is not only just a form of transportation, it  is a step forward toward sustainable options. As a society, it is important to recognize the power of biking in terms of our health and the environment. Major transit corporations such as Metro have  the power to enhance our commuting experiences and educate us on cycling safety. Our unique analysis of bike trip data captivates the shifting development of public mobility. </p>
 
+    <h1> Research Questions </h1>
+    <h1> Significant Findings </h1>
+    <h1> Recommendations </h1>
+    <h1> Conclusion </h1>
     
     
 </body>
