--- a/data.html
+++ b/data.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     
     <!-- style sheets -->
-    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/data.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ropa+Sans">
 
 </head>
