--- a/home.html
+++ b/home.html
@@ -35,15 +35,22 @@
 <body>
 <div class="container">
   
+<!-- Logo -->
   <div class="logo">
     <a href="home.html"><img src="images/icon/BikeItLogo.png" width="195px"></a>
     <i>An analysis for Metro Bike Share Stations and Usage (2021 Q2 - 2022 Q1)</i>
   </div>
   
     
-<!-- Banner -->
-<div class="banner">
-    <img src="images/bike-share-hero.jpeg" style="width:100%;border-radius:20%;">
+<!-- Slideshow -->
+<div class="slideshow">
+
+ 
+</div>
+
+
+<!-- Menu buttons -->
+<div class="menu">
     <a href="data.html"><button class="button">Data</button></a>
     <a href="map.html"><button class="button">Map</button></a>
     <a href="analysis.html"><button class="button">Analysis</button></a>
@@ -51,6 +58,7 @@
     <a href="about.html"><button class="button">About</button></a>
 </div>
 
+<!-- Main menu -->
     <input type="checkbox" id="active">
     <label for="active" class="menu-btn"><span></span></label>
     <label for="active" class="close"></label>
@@ -65,8 +73,7 @@
       </ul>
 </div>
   
-  
-  <script src="js/home.js"></script>
+  <script src="js/map.js"></script>
 
 </body>
 </html>
