--- a/home.html
+++ b/home.html
@@ -8,6 +8,9 @@
     <!-- style sheets -->
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ropa+Sans">
+
+    <!-- Slideshow -->
+    <link rel="stylesheet" href="split-slick-slideshow/css/style.css">
     
     <!-- leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
@@ -45,7 +48,8 @@
 <!-- Slideshow -->
 <div class="slideshow">
 
- 
+    <img src="images/bike-share-hero.jpeg" style="width:100%; border-radius: 20%;">
+
 </div>
 
 
@@ -72,8 +76,7 @@
         <li><a href="about.html">About</a></li>
       </ul>
 </div>
-  
-  <script src="js/map.js"></script>
 
+    <script src="js/home.js"></script>
 </body>
 </html>
