--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
     <div class="container">
   
         <div class="logo">
-            <a href="home.html"><img src="images/icon/BikeItLogo.png" width="195px"></a></h3>
+            <a href="home.html"><img src="images/icon/BikeItLogo.png" width="195px"></a>
+            
         </div>
 
 
