--- a/about.html
+++ b/about.html
@@ -146,10 +146,10 @@
 
 <div class="row">
     <div class="about">
-        <h2 text-align: center>Our Goal</h2>
+        <h2 text-align: center>Our Goal</h2><br>
             <p>To examine the trends of bike-share usage and look for solutions to enhance the bike-share contribution to all aspects of our lives.</p>
       <br>
-    <table style="width:100%">
+    <table style="width:80%" class="center">
                 <tr>
                   <th>Metro Bike-Share</th>
                   <td>To understand bike-share program performance, uncover trends that help answer how it can be done better.</td>
@@ -173,7 +173,7 @@
 <br>
 <br>
 
-    <h2 text-align: center>Acknowledgements</h2>
+    <h2 text-align: center>Acknowledgements</h2><br>
     <p><i>
     We would like to deeply thank our professor, Yoh Kawano, for his guidance and support throughout this ten-week project. His deep knowledge and expertise in the field of Web GIS and Digital Mapping allowed us to strengthen our research questions, data analysis, and data visualizations to create a cohesive and structured narrative for our website.
     </i></p>
