--- a/blog.html
+++ b/blog.html
@@ -10,20 +10,25 @@
 </head>
 
 <body>
-  <input type="checkbox" id="active">
-  <label for="active" class="menu-btn"><span></span></label>
-  <label for="active" class="close"></label>
-  <div class="wrapper">
-    <ul>
-      <li><a class="active" href="home.html">Home</a></li>
-      <li><a href="data.html">Data</a></li>
-      <li><a href="map.html">Map</a></li>
-      <li><a href="analysis.html">Analysis</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="about.html">About</a></li>
-    </ul>
+  <!-- Logo -->
+  <div class="logo">
+    <a href="home.html"><img src="images/icon/BikeItLogo.png" width="195px"></a>
+  </div>
+  
+<!-- Main menu -->
+<input type="checkbox" id="active">
+<label for="active" class="menu-btn"><span></span></label>
+<label for="active" class="close"></label>
+<div class="wrapper">
+  <ul>
+    <li><a class="active" href="home.html">Home</a></li>
+    <li><a href="data.html">Data</a></li>
+    <li><a href="map.html">Map</a></li>
+    <li><a href="analysis.html">Analysis</a></li>
+    <li><a href="blog.html">Blog</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
 </div>
-
 
 <br>
       <div class="card">
