--- a/map.html
+++ b/map.html
@@ -32,16 +32,27 @@
 
 </head>
 <body>
-	<div class="menu">
-        <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="data.html">Data</a></li>
-            <li><a class="active" href="map.html">Map</a></li>
-            <li><a href="analysis.html">Analysis</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
-    </div>
+	<!-- Logo -->
+	<div class="logo">
+		<a href="home.html"><img src="images/icon/BikeItLogo.png" width="195px"></a>
+	  </div>
+
+	  <!-- Main menu -->
+	  <input type="checkbox" id="active">
+	  <label for="active" class="menu-btn"><span></span></label>
+	  <label for="active" class="close"></label>
+	  <div class="wrapper">
+		<ul>
+		  <li><a class="active" href="home.html">Home</a></li>
+		  <li><a href="data.html">Data</a></li>
+		  <li><a href="map.html">Map</a></li>
+		  <li><a href="analysis.html">Analysis</a></li>
+		  <li><a href="blog.html">Blog</a></li>
+		  <li><a href="about.html">About</a></li>
+		</ul>
+  </div>
+
+
 	<div class="header">
 	</div>
 	<div class="sidebar">
@@ -117,7 +128,7 @@
 		</p>
 
 	</div>
-	<div class="content">
+	<div class="mapcontent">
 		<div id="map"></div>
 	</div>
 
