--- a/data.html
+++ b/data.html
@@ -75,7 +75,7 @@
     </tr>
     <tr>
       <th>Plan Duration</th>
-      <td>Usage of bike determined by passholder type <br> 1 - Walk-Up<br> 30- Monthly <br> 365- Annual<br></td>
+      <td>Usage of bike determined by passholder type: <br><br>1 - Walk-Up<br> 30- Monthly <br> 365- Annual<br></td>
     </tr>
     <tr>
       <th>Trip Route</th>
