--- a/about.html
+++ b/about.html
@@ -12,33 +12,27 @@
 </head>
 
 <body>
-    <div class="container">
-  
+    <div class="header" id="myHeader">
+        <!-- Logo -->
         <div class="logo">
-            <a href="home.html"><img src="images/icon/BikeItLogo.png" width="195px"></a>
-            
+          <a href="home.html"><img src="images/icon/BikeItLogo.png" width="195px"></a>
         </div>
-
-
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-       <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-     </head>
-   
-<body>
-       <input type="checkbox" id="active">
-       <label for="active" class="menu-btn"><span></span></label>
-       <label for="active" class="close"></label>
-       <div class="wrapper">
-         <ul>
-           <li><a class="active" href="home.html">Home</a></li>
-           <li><a href="data.html">Data</a></li>
-           <li><a href="map.html">Map</a></li>
-           <li><a href="analysis.html">Analysis</a></li>
-           <li><a href="blog.html">Blog</a></li>
-           <li><a href="about.html">About</a></li>
-         </ul>
-   </div>
+      
+        <!-- Main menu -->
+        <input type="checkbox" id="active">
+        <label for="active" class="menu-btn"><span></span></label>
+        <label for="active" class="close"></label>
+        <div class="wrapper">
+          <ul>
+            <li><a class="active" href="home.html">Home</a></li>
+            <li><a href="data.html">Data</a></li>
+            <li><a href="map.html">Map</a></li>
+            <li><a href="analysis.html">Analysis</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="about.html">About</a></li>
+          </ul>
+          </div>
+      </div>
 </body>
 
 
@@ -186,4 +180,6 @@
   <script src="js/about.js"></script>
 
 </body>
+
+
 </html>
