--- a/data.html
+++ b/data.html
@@ -12,25 +12,29 @@
 </head>
 
 <body>
-    <!-- Logo -->
-  <div class="logo">
-    <a href="home.html"><img src="images/icon/BikeItLogo.png" width="195px"></a>
-  </div>
 
-  <!-- Main menu -->
-  <input type="checkbox" id="active">
-  <label for="active" class="menu-btn"><span></span></label>
-  <label for="active" class="close"></label>
-  <div class="wrapper">
-    <ul>
-      <li><a class="active" href="home.html">Home</a></li>
-      <li><a href="data.html">Data</a></li>
-      <li><a href="map.html">Map</a></li>
-      <li><a href="analysis.html">Analysis</a></li>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="about.html">About</a></li>
-    </ul>
-</div>
+  <div class="header" id="myHeader">
+    <!-- Logo -->
+    <div class="logo">
+      <a href="home.html"><img src="images/icon/BikeItLogo.png" width="195px"></a>
+    </div>
+  
+    <!-- Main menu -->
+    <input type="checkbox" id="active">
+    <label for="active" class="menu-btn"><span></span></label>
+    <label for="active" class="close"></label>
+    <div class="wrapper">
+      <ul>
+        <li><a class="active" href="home.html">Home</a></li>
+        <li><a href="data.html">Data</a></li>
+        <li><a href="map.html">Map</a></li>
+        <li><a href="analysis.html">Analysis</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+      </div>
+  </div>
+  
     
   <h1><center>The Data</center></h1>
       
@@ -101,4 +105,26 @@
 
   <h1> Seeing the Data </h1>
 </body>
+
+<script>
+  // When the user scrolls the page, execute myFunction
+  window.onscroll = function() {myFunction()};
+  
+  // Get the header
+  var header = document.getElementById("myHeader");
+  
+  // Get the offset position of the navbar
+  var sticky = header.offsetTop;
+  
+  // Add the sticky class to the header when you reach its scroll position. Remove "sticky" when you leave the scroll position
+  function myFunction() {
+    if (window.pageYOffset > sticky) {
+      header.classList.add("sticky");
+    } else {
+      header.classList.remove("sticky");
+    }
+  }
+  </script>
+
 </html>
+
