--- a/analysis.html
+++ b/analysis.html
@@ -119,6 +119,8 @@ src="https://www.youtube.com/embed/oFqlYVTw_K8?autoplay=1&mute=1&loop=1" allowfu
 
 
     <h1><center>Significant Findings </center> </h1> <br>
+    
+    <p> The 
     <h1><center>Recommendations </center> </h1> <br>
     <h1><center>Conclusion </center> </h1> <br>
     
