--- a/about.html
+++ b/about.html
@@ -158,7 +158,21 @@
                 </tr>
     </table>
     <br>
-    <p><a href="https://tiannachan.github.io/BikeIt" target="_blank"><button class="button">Link to our proposal</button></a></p>
+    <p>
+        <a href="https://tiannachan.github.io/BikeIt" target="_blank" class="cta">
+            <span>Our Proposal</span>
+            <svg width="13px" height="10px" viewBox="0 0 13 10">
+              <path d="M1,5 L11,5"></path>
+              <polyline points="8 1 12 5 8 9"></polyline>
+            </svg>
+          </a>  
+
+
+
+
+
+
+    </p>
     </div> 
     <br>
 </div>
