--- a/analysis.html
+++ b/analysis.html
@@ -120,7 +120,9 @@ src="https://www.youtube.com/embed/oFqlYVTw_K8?autoplay=1&mute=1&loop=1" allowfu
 
     <h1><center>Significant Findings </center> </h1> <br>
     
-    <p> The 
+    <p> Our findings provide insights into the performance levels of the Metro Bike Share Program and the biking culture of Los Angeles. Our map pinpoints popular biking usage on the West Side Locations, specifically Venice Beach, Santa Monica, and Downtown Los Angeles. There are hundreds of stations scattered throughout beach areas and the heart of the city. Evidently, these areas have a high concentration of bike trips throughout the four quarters as shown on our map bubbles. Interestingly, there is no usage of the bike share program in certain areas of the city such as Watts, Crenshaw, and South LA because there are virtually no stations although there are bike lanes. Our unique map showcases live availability of these bikes which majority of the time are always available in the highly concentrated areas of downtown and west LA. This pattern remains consistent throughout each quarter, especially Venice Beach, the Metro Bike Share hotspot. </p>
+    <p> It is evident that the program has become an evolutionary commutable service in our community. Users are indeed using the passes for the services and conducting one-way trips throughout the city. Thousands of passengers are able to successfully access the bikes and conveniently return at any station. We must also take into consideration how bike lanes also play a critical role in the program’s performance levels and efficiency. These lanes enable all bicyclists to ride at their speed without facing dangerous traffic conditions. However, the bike program is not available in all areas regardless of  bike lanes. Evidently, areas with little to no bike lanes have no access to the service compared to popular beach towns with flexible bike lanes. To give proper service, the program must look into equitable inventory in neglected areas,pass holder affordability, customer satisfaction, and servicing of the bike. </p> 
+
     <h1><center>Recommendations </center> </h1> <br>
     <h1><center>Conclusion </center> </h1> <br>
     
