--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
       <div class="card">
         <h2>Week 10</h2>
         <h5>June 5, 2022</h5>
-        <p> Updates </p>
+        <p> The writing portion of our narrative has been drafted, edited, and published. The data page now includes visuals for further research on our bike data and writing information. </p>
       </div>
       <div class="card">
         <h2>Week 9</h2>
