--- a/about.html
+++ b/about.html
@@ -159,13 +159,7 @@
     </table>
     <br>
     <p>
-        <a href="https://tiannachan.github.io/BikeIt" target="_blank" class="cta">
-            <span>Our Proposal</span>
-            <svg width="13px" height="10px" viewBox="0 0 13 10">
-              <path d="M1,5 L11,5"></path>
-              <polyline points="8 1 12 5 8 9"></polyline>
-            </svg>
-          </a>  
+        <a href="https://tiannachan.github.io/BikeIt" class="button" target="_blank">Our Proposal</a>
 
 
 
