--- a/analysis.html
+++ b/analysis.html
@@ -40,7 +40,7 @@
  <h1><center>Introduction: Leaving Traffic Jams Behind - What is Metro Bike Share ? </center></h1>
 
  <br>
- <div style="text-align: center;"><iframe width=1280px height="720" class="center"
+ <div style="text-align: center;"><iframe width=720px height=480px class="center"
 src="https://www.youtube.com/embed/oFqlYVTw_K8?autoplay=1&mute=1&loop=1" allowfullscreen="allowfullscreen" frameborder="0">
 </iframe></div>
 <br>
