--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head> 
   <meta charset="UTF-8">
-  <title>Metro Bike Share Analysis</title>
+  <title>Bike It! A Metro Bike Share Analysis</title>
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ropa+Sans">
 </head>
