--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 
   <div class="container">
       <div class="intro">
-        <img src="images/icon/bikeitlogowhite.png">
+        <img src="images/icon/bikeitlogowhite.png" height=400px>
         <p>
           <i>An analysis for Metro Bike Share Stations and Usage (2021 Q2 - 2022 Q1)</i>
 
