--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 
         </p>
         <br>
-        <a href="data.html" class="btn">Enter</a> 
+        <a href="map.html" class="btn">Enter</a> 
       </div>
   </div>
 
