--- a/map.html
+++ b/map.html
@@ -64,7 +64,6 @@
 					<img src="images/icon/greyBike.png" width="25">: No Available Bikes 
 				</p>
 			<p>Hover on the green roads to see the bike lane streets.</p>
-			<!-- <p>Use the toggle box on the upper right to select desirable layers.</p> -->
 			<p>Click to show or hide the station and bike lanes:</p>
 			<p align="center"><button class="button-3" role="button" onclick= (mapBikeLane(),mapStation()) >Show</button>/<button class="button-3-grey" role="button" onclick= (laneLayer.clearLayers(),stationLayer.clearLayers())>Hide</button></p>
 
@@ -72,8 +71,8 @@
 			<div class="dropdown">
 				<button class="dropbtn-red"> Start Stations ▽ </button>
 				<div class="dropdown-content">
-				  <a href="#" onclick="newmapStart('2021_q2_count')">2021 Quarter 2</a>
-				  <a href="#" onclick="newmapStart('2021_q3_count')">2021 Quarter 3</a>
+					<a href="#" onclick="newmapStart('2021_q2_count')">2021 Quarter 2</a>
+					<a href="#" onclick="newmapStart('2021_q3_count')">2021 Quarter 3</a>
 					<a href="#" onclick="newmapStart('2021_q4_count')">2021 Quarter 4</a>
 					<a href="#" onclick="newmapStart('2022_q1_count')">2022 Quarter 1</a>
 					<a href="#" onclick="mapStart()">Total</a>
@@ -91,55 +90,32 @@
 				</div>
 			</div>
 
-<!-- <div class="sidebar-box">
-			<h3>Popular Start Stations</h3>
-			<div class="sidebar-item" onclick="newmapStart('2021_q2_count')">2021 Quarter 2</div>
-			<div class="sidebar-item" onclick="newmapStart('2021_q3_count')">2021 Quarter 3</div>
-			<div class="sidebar-item" onclick="newmapStart('2021_q4_count')">2021 Quarter 4</div>
-			<div class="sidebar-item" onclick="newmapStart('2022_q1_count')">2022 Quarter 1</div>
-			<div class="sidebar-item" onclick="mapStart()">Total</div>
-		</div> -->
-
+		<br>
+		<br>
 		<br>
 
-		<!-- <div class="sidebar-box">
-			<h3>Popular End Stations</h3>
-			<div class="sidebar-item" onclick="newmapEnd('2021_q2_count')">2021 Quarter 2</div>
-			<div class="sidebar-item" onclick="newmapEnd('2021_q3_count')">2021 Quarter 3</div>
-			<div class="sidebar-item" onclick="newmapEnd('2021_q4_count')">2021 Quarter 4</div>
-			<div class="sidebar-item" onclick="newmapEnd('2022_q1_count')">2022 Quarter 1</div>
-			<div class="sidebar-item" onclick="mapEnd()">Total</div>
-		</div> -->
+	</div>
 
-		<br>
-
-		<div class="sidebar-box">
-			<h3>Explore</h3>
-			<div class="sidebar-item" onclick="flyToIndex(34.066242,-118.445328)">UCLA*</div>
-			<div class="sidebar-item" onclick="flyToIndex(34.02278,-118.40472)">Palms/Culver City</div>
-			<div class="sidebar-item" onclick="flyToIndex(33.980289,-118.451745)">Venice/ Del Rey/ Playa Vista</div>
-			<div class="sidebar-item" onclick="flyToIndex(34.050833,-118.255)">Downtown LA</div>
-			<div class="sidebar-item" onclick="flyToIndex(34.098907,-118.327759)">Hollywood</div>
-			<div class="sidebar-item" onclick="flyToIndex(34.091341,-118.293589)">East Hollywood</div>
-			<div class="sidebar-item" onclick="flyToIndex(34.157802,-118.370441)">North Hollywood</div>
-		</div>
-		<p>
-		*Metro Bike Share expansion to the UCLA campus and Westwood Village is launched in Spring 2022.
-		</p>
-
+	<div class="explore">
+		<div class="explore-item" onclick="flyToIndex(34.066242,-118.445328)">UCLA*</div>
+		<div class="explore-item" onclick="flyToIndex(34.02278,-118.40472)">Palms/Culver City</div>
+		<div class="explore-item" onclick="flyToIndex(33.980289,-118.451745)">Venice/ Del Rey/ Playa Vista</div>
+		<div class="explore-item" onclick="flyToIndex(34.050833,-118.255)">Downtown LA</div>
+		<div class="explore-item" onclick="flyToIndex(34.098907,-118.327759)">Hollywood</div>
+		<div class="explore-item" onclick="flyToIndex(34.091341,-118.293589)">East Hollywood</div>
+		<div class="explore-item" onclick="flyToIndex(34.157802,-118.370441)">North Hollywood</div>
+	</div>
+	
 	</div>
 	<div class="mapcontent">
 		<div id="map"></div>
 	</div>
 
-
-
-
-
-
 	<div class="footer">
 		Data source: <a href="https://bikeshare.metro.net/about/data/">Metro Bike Share</a>;
         <a href="https://geohub.lacity.org/datasets/230abc621b144dbc96cca83d65bd454d/explore?location=34.033311%2C-118.317725%2C10.87">Bike Lanes</a>
+		<br>
+		*Metro Bike Share expansion to the UCLA campus and Westwood Village is launched in Spring 2022.
 	</div>
 
 	<script src="js/map.js"></script>
