--- a/map.html
+++ b/map.html
@@ -37,11 +37,11 @@
 		<a href="home.html"><img src="images/icon/BikeItLogo.png" width="195px"></a>
 	  </div>
 
-	  <!-- Main menu -->
-	  <input type="checkbox" id="active">
-	  <label for="active" class="menu-btn"><span></span></label>
-	  <label for="active" class="close"></label>
-	  <div class="wrapper">
+	<!-- Main menu -->
+	<input type="checkbox" id="active">
+	<label for="active" class="menu-btn"><span></span></label>
+	<label for="active" class="close"></label>
+	<div class="wrapper">
 		<ul>
 		  <li><a class="active" href="home.html">Home</a></li>
 		  <li><a href="map.html">Map</a></li>
@@ -50,11 +50,8 @@
 		  <li><a href="blog.html">Blog</a></li>
 		  <li><a href="about.html">About</a></li>
 		</ul>
-  </div>
-
-
-	<div class="header">
 	</div>
+
 	<div class="sidebar">
         <h2>INSTRUCTIONS</h2>
 			<p>Click on the bike icons to see station address and available bikes.</p>
@@ -92,6 +89,7 @@
 
 		<br>
 		<br>
+		<p style="font-size:12px;line-height:12px">*Metro Bike Share expansion to the UCLA campus and Westwood Village is launched in Spring 2022.</p>
 		<br>
 
 	</div>
@@ -115,7 +113,6 @@
 		Data source: <a href="https://bikeshare.metro.net/about/data/">Metro Bike Share</a>;
         <a href="https://geohub.lacity.org/datasets/230abc621b144dbc96cca83d65bd454d/explore?location=34.033311%2C-118.317725%2C10.87">Bike Lanes</a>
 		<br>
-		*Metro Bike Share expansion to the UCLA campus and Westwood Village is launched in Spring 2022.
 	</div>
 
 	<script src="js/map.js"></script>
