--- a/analysis.html
+++ b/analysis.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Analysis - Metro Bike Share</title>
+    <title>Bike It! - Analysis</title>
     <meta charset="utf-8" />
     
     <!-- style sheets -->
