--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-  <title>Analysis - Metro Bike Share</title>
+  <title>Bike It! - Blog</title>
   <meta charset="utf-8" />
 
   
