--- a/newabout.html
+++ b/newabout.html
@@ -14,12 +14,19 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/f47af173a8.js" crossorigin="anonymous"></script>
 
-    <title>Meet the Team </title> 
+    <title>Bike It! - Team </title> 
 </head>
 
 <body>
+
     <div class="header" id="myHeader">
         <!-- Logo -->
+        <div class="logo">
+          <a href="home.html"><img src="images/icon/BikeItLogo.png" width="195px"></a>
+        </div>
+
+
+
       
         <!-- Main menu -->
         <input type="checkbox" id="active">
