--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Metro Bike Share Analysis</title>
+    <title>Bike It! - Team! </title>
     <meta charset="utf-8" />
     
     <!-- style sheets -->
