--- a/data.html
+++ b/data.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Data - Metro Bike Share</title>
+    <title>Bike It! - Data</title>
     <meta charset="utf-8" />
     
     <!-- style sheets -->
