--- a/map.html
+++ b/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bike Map</title>
+	<title>Bike It! - Map</title>
 	<meta charset="utf-8" />
 
 	<!-- style sheets -->
