update map buttons

--- a/analysis.html
+++ b/analysis.html
@@ -30,7 +30,7 @@
       <li><a href="data.html">Data</a></li>
       <li><a href="analysis.html">Analysis</a></li>
       <li><a href="blog.html">Blog</a></li>
-      <li><a href="about.html">About</a></li>
+      <li><a href="about.html">Team</a></li>
     </ul>
     </div>
 </div>
