bouncing enter button

--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 
         </p>
         <br>
-        <a href="map.html" class="btn">Enter</a> 
+        <div id="bounce"><a href="map.html" class="btn">Enter</a> </div>
       </div>
   </div>
 
