--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                         <img src="images/team/Tianna.jpeg" alt="Team Image">
                     </div>
                     <div class="team-content">
-                        <h2>Yin Ue “Tianna” Chan</h2>
+                        <h2>Tianna Chan</h2>
                         <h2>(she/her/hers)</h2>
                         <h3>Project Manager</h3>
                         <p>Yin Ue “Tianna” Chan is a senior pursuing a B.S. in Math/Econ with a minor in Digital Humanities. She is always looking for opportunities to improve her skills. After graduation, she hopes to leverage her analytical, critical thinking, and problem-solving skills in the business world and build a better community.</p>
