--- a/blog.html
+++ b/blog.html
@@ -39,11 +39,10 @@
 
 <h1><center>Project Blog Updates</center></h1>
 <div class="blog">
-<br>
       <div class="card">
         <h2>Final Project</h2>
         <h5>June 6, 2022</h5>
-        <p> Updates </p>
+        <p> We put all our writings and findings on the website, and made some final edits for the design and graphics. Our final presentation can be viewed <a href="https://docs.google.com/presentation/d/1JLjDK8STyg5GL6ZqJpyCZa86glaje1LJEOwD31-dZS4/edit#slide=id.p">here</a>!</p>
       </div>
       <div class="card">
         <h2>Week 10</h2>
