section title styling

--- a/analysis.html
+++ b/analysis.html
@@ -37,7 +37,9 @@
 
 <br>
     
- <h1><center>Introduction: Leaving Traffic Jams Behind - What is Metro Bike Share ? </center></h1>
+  <div class="section-title">
+    <h1>Introduction: Leaving Traffic Jams Behind - What is Metro Bike Share ?</h1>
+  </div>
 
  <br>
  <div style="text-align: center;"><iframe width=720px height=480px class="center"
