--- a/blog.html
+++ b/blog.html
@@ -36,8 +36,10 @@
   </div>
 
 
+  <div class="section-title">
+    <h1>Project Blog Updates</h1>
+  </div>
 
-<h1><center>Project Blog Updates</center></h1>
 <div class="blog">
       <div class="card">
         <h2>Final Project</h2>
