--- a/data.html
+++ b/data.html
@@ -35,9 +35,10 @@
       </div>
   </div>
   
-    
-  <h1><center>The Data</center></h1>
-      
+  <div class="section-title">
+    <h1><center>The Data</center></h1>
+  </div>
+
   <h2><b>1. <a href="https://bikeshare.metro.net/about/data/">Metro Bike Share data</a></b></h2><br>
  
 <p> This website contains the trip data from 2016 quarter 3 to 2022 quarter 1 (as of April 2022). We will be analyzing their 2021 quarter 2 to 2022 quarter 1 data (April 2021- March 2022). The data is downloaded as CSV, which contains variables such as the duration, start and end locations, trip route categories, bike types, and the passholder types. </p>
