embed google slides

--- a/blog.html
+++ b/blog.html
@@ -42,9 +42,9 @@
 
 <div class="blog">
       <div class="card">
-        <h2>Final Project</h2>
+        <h2>Finals Week</h2>
         <h5>June 6, 2022</h5>
-        <p> We put all our writings and findings on the website, and made some final edits for the design and graphics. Our final presentation can be viewed <a href="https://docs.google.com/presentation/d/1JLjDK8STyg5GL6ZqJpyCZa86glaje1LJEOwD31-dZS4/edit#slide=id.p">here</a>!</p>
+        <p> We put all our writings and findings on the website, and made some final edits for the design and graphics. </p><p> Our final presentation: <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSJHsFdJysOZjwD1bg-fmCsjAf8MAlJzvNeCaK6aPoqIg3FJQHxjn5sQUCb7Ea6vxZ7z-Z1JZFhAFBj/embed?start=true&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> </p>
       </div>
       <div class="card">
         <h2>Week 10</h2>
@@ -69,7 +69,7 @@
       <div class="card">
         <h2>Week 6</h2>
         <h5>May 8, 2022</h5>
-        <p> This week, we created a prototype for our project website, including a fully functional interative about and maproom page. In our midterm presentation on May 9, 2022, we introduced the importance of the map along with our concept art, mindmaps, storyboards, and other UX design elements. We also determined some of our next steps. Our midterm presentation can be viewed <a href="https://docs.google.com/presentation/d/1LM3kNM4iLqw9vSxSi_nBg6TIsviGjJD7SV_KEyyg0uk/edit#slide=id.g1266c543ba9_0_2003">here</a>. This week, we also initialized implementing the bubbles based on the start and end stations popularity. </p>
+        <p> This week, we created a prototype for our project website, including a fully functional interative about and maproom page. In our midterm presentation on May 9, 2022, we introduced the importance of the map along with our concept art, mindmaps, storyboards, and other UX design elements. We also determined some of our next steps. This week, we also initialized implementing the bubbles based on the start and end stations popularity. </p><p>Our midterm presentation: <br> <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRT2F5uIDM5dlZ8NICCKjZp3IL-0IeHEVrlHXrSKnMPpHR5xtlBaBnw76i9t32TEhMzP3YCtAxbgt3W/embed?start=true&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>.  </p>
       </div>
       <div class="card">
         <h2>Week 5</h2>
