--- a/map.html
+++ b/map.html
@@ -52,6 +52,12 @@
 		</ul>
 	</div>
 
+	<div class="header">
+		<div class="section-title">
+		<h1>Bike Map</h1>
+	  </div>
+	</div>
+
 	<div class="sidebar">
         <h2>INSTRUCTIONS</h2>
 			<p>Click on the bike icons to see station address and available bikes.</p>
